nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # Asegura que las rutas funcionen correctamente
spec:
  rules:
  - host: nginx.local # Cambia esto por el dominio que desees usar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service # Este debe coincidir con el nombre de tu Service
            port:
              number: 80 # Puerto que expone tu servicio
